# wasm

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
scripts/: build_web.sh  start_server.sh
src/: app.rs  lib.rs  web.rs
web/: index.html
